Bug 60764 - EDITING: Data sort dialog box is bigger
Summary: EDITING: Data sort dialog box is bigger
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All macOS (All)
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.1.0 target:4.0.3
Keywords:
: 63276 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-02-13 04:00 UTC by h.saito
Modified: 2015-01-13 04:42 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of the dialog (118.71 KB, image/png)
2013-02-19 20:23 UTC, Jorendc
Details
dialog screenshot (251.42 KB, image/jpeg)
2013-02-20 02:09 UTC, h.saito
Details
config.tar.gz (789.13 KB, application/gzip)
2013-02-22 12:12 UTC, h.saito
Details

Note You need to log in before you can comment on or make changes to this bug.
Description h.saito 2013-02-13 04:00:02 UTC
Problem description: 

Steps to reproduce:
1. serect menu "data"
2. serect "sort"


Operating System: Mac OS X
Version: 4.0.0.3 release
Comment 1 Adolfo Jayme Barrientos 2013-02-19 01:52:31 UTC
Just for the sake of completeness, can you attach an screenshot of the problem you’re seeing?
Comment 2 Jorendc 2013-02-19 20:18:20 UTC
I can confirm the dialog is (unnecessary) big. Using Linux Mint 14 x64 with LibreOffice Version 4.1.0.0.alpha0+ (Build ID: c5c5d87e8838b372968481483a5e20f5c5f56e3).
This is a result due a convertion to a new code style (.ui extension using Glade).

Kind regards,
Joren
Comment 3 Jorendc 2013-02-19 20:23:58 UTC
Created attachment 75130 [details]
screenshot of the dialog
Comment 4 Caolán McNamara 2013-02-19 23:28:12 UTC
hmm, FWIW for me, under Linux, the new dialog in 4-0 itself is about the same size as the previous dialog as found in 3-6 (a little less height, a tiny bit more width)

One thought is that the allocation of all the available space in the "sort criteria" tab page to the "Column A" etc control is way too much, which is a change from 3-6 where it occupied less of the available width. If that's the problem we could turn off the expand property for that and either let it take its natural width of just wide enough to fit "Column A" or some up with another scheme to make it use less width.

I'd like to hear from the original reporter as to what looks wrongly bigger in 4.0.0 vs an earlier release to make sure there isn't a different MacOSX specific super wrong thing that I don't see locally.
Comment 5 h.saito 2013-02-20 02:09:46 UTC
Created attachment 75151 [details]
dialog screenshot

Sorry. 
There were no problems with another user.
Maybe there is a problem with the environment inherited from ver3.6.
Comment 6 Caolán McNamara 2013-02-20 10:10:39 UTC
Yikes!, that's a completely busted dialog :-), while we're talking about tiny little "make it beautiful" adjustments rather than a "it doesn't fit on the screen at all" problem
Comment 7 Caolán McNamara 2013-02-20 15:09:13 UTC
Looks under with 4-0-0 with ja locale under Linux anyway, odd.
Comment 8 Caolán McNamara 2013-02-22 10:51:23 UTC
Installed 4.0 on Mac OSX and this doesn't happen for me, even with the Japanese langpack installed and the language set to Japanese.

Perhaps there is some config setting triggering this, so the only suggestion I got let is to tar up your config dir like so... 
tar cvzf /tmp/config.tar.gz ~/Library/Application\ Support/LibreOffice/
and either attach that here, or send it to me directly if you're worried that there is any personal info in that.
Comment 9 h.saito 2013-02-22 12:12:02 UTC
Created attachment 75308 [details]
config.tar.gz

attach the data in config.
I hope that this data is helpful.
(using google translation.)
Comment 10 Caolán McNamara 2013-02-22 14:07:31 UTC
yes, I can reproduce this with your config.
Comment 11 Caolán McNamara 2013-02-22 14:15:39 UTC
Aha, so you have a *huge* sort list and the dialog is resizing to try and fit the lot. There's the problem.
Comment 12 Not Assigned 2013-02-22 16:59:01 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7c760f34a00462d5904d0e2eed4132761c2e51c5

Resolves: fdo#60764 sort options can grow too wide to fit on screen



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Not Assigned 2013-02-25 13:02:45 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c1d3315e8d1e4d8be4bcabcf343ef5dd76d63691

Related: fdo#60764 APPFONT is 1/8 avg char *height* & 1/4 avg char *width*



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Not Assigned 2013-02-25 16:04:19 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e43b2fa55e244db36111a7cb0548f2ff5d2ae66a&h=libreoffice-4-0

Resolves: fdo#60764 sort options can grow too wide to fit on screen


It will be available in LibreOffice 4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Caolán McNamara 2013-04-10 14:07:18 UTC
*** Bug 63276 has been marked as a duplicate of this bug. ***
Comment 16 h.saito 2013-04-15 09:22:30 UTC
This issue has been resolved in 4.0.2.2.
Everyone who was involved, thank you.
Comment 17 Jorendc 2013-04-15 09:26:09 UTC
(In reply to comment #16)
> This issue has been resolved in 4.0.2.2.
> Everyone who was involved, thank you.

Thanks for your feedback, but please do not change the bug version. The version of this bug should be the oldest version of LibreOffice you can reproduce this behavior. Therefore I undo your changes and mark it back to version 4.0.0.3 release.

PS: good it is fixed now, but it is strange it's already fixed in 4.0.2. The patch will be included in version 4.0.3 :-). But, the better it's solved now.

Kind regards,
Joren