Resolves: fdo#60764 sort options can grow too wide to fit on screen

(cherry picked from commit 7c760f34a00462d5904d0e2eed4132761c2e51c5)

Conflicts:
	sc/uiconfig/scalc/ui/sortoptionspage.ui
	vcl/inc/vcl/lstbox.hxx
	vcl/source/control/lstbox.cxx

Change-Id: Id3aed9ef251f61710b43ceda1a28c6895e91872f